--- a/src/Repository.MySql/Repository.MySql.csproj
+++ b/src/Repository.MySql/Repository.MySql.csproj
@@ -2,6 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Appelinda.Repository.MySql</PackageId>
+    <Title>Generic repository for MySql</Title>
+    <Authors>Ali Tabryzy</Authors>
+    <Description>A generic repository pattern implementation for MySql</Description>
+    <Copyright>Ali Tabryzy 2019</Copyright>
+    <PackageProjectUrl>https://github.com/AliTabryzy/com.appelinda.nuget.genericRepository</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/AliTabryzy/com.appelinda.nuget.genericRepository/blob/master/LICENSE</PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/AliTabryzy/com.appelinda.nuget.genericRepository/tree/master/src/Repository.MySql</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>Generic,Repository,MySql</PackageTags>
   </PropertyGroup>
 
 </Project>
