mysql generic is ready to test

--- a/src/Repository.MongoDb/Repository.MongoDb.csproj
+++ b/src/Repository.MongoDb/Repository.MongoDb.csproj
@@ -15,4 +15,8 @@
     <PackageId>Appelinda.Repository.MongoDb</PackageId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.8.0" />
+  </ItemGroup>
+
 </Project>
