--- a/src/Repository.MySql/Repository.MySql.csproj
+++ b/src/Repository.MySql/Repository.MySql.csproj
@@ -15,4 +15,9 @@
     <PackageTags>Generic,Repository,MySql</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
